# AGT_Brain

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  start_synapzcore.bat
.cargo/: config.toml
Agent_Profiles/: Antigravity.md  GEMINI.md.example  Grok.json  How_We_Work.md  Setup_Agent_Prompt.md
crates/agt-mcp/src/: main.rs
crates/agt-tools/src/: grok.rs  lib.rs
crates/synapz-mcp/: Cargo.toml
crates/synapz-mcp/src/: main.rs
crates/synapz-memory/: Cargo.toml
crates/synapz-memory/src/: lib.rs  supabase.rs
crates/synapz-memory/tests/: supabase_test.rs
crates/synapz-orchestrator/: Cargo.toml
crates/synapz-orchestrator/examples/: mini_real.json  role_test.json  website_graph.json
crates/synapz-orchestrator/src/: agent.rs  coordinator.rs  git_isolation.rs  main.rs  parallel_executor.rs  pipeline.rs  roles.rs  runner.rs  scanner.rs  self_correct.rs  smart_merge.rs  state.rs  task_graph.rs  work_buffer.rs
crates/synapz-tools/: Cargo.toml
crates/synapz-tools/src/: cdp_controller.rs  grok.rs  lib.rs  memory.rs
scripts/: agent_sdk.py  agt_brain_memory.py  coordination.py  dashboard.html  dashboard_server.py  dream_compression.py  extract_knowledge.js  extract_knowledge_v2.js  folder_watcher.py  graph_memory.py  miniapp.html  poll_coordination.py  run_brain_cron.bat  synapz_memory.py  telegram_bridge.py  test_coordination.py  test_e2e_http.py  workflow_editor.html
scripts/grok_cookie_refresh/: .gitignore  auto_chat_and_capture.js  capture_grok_page_request.js  capture_grok_request.js  cookie_refresh.js  cookie_refresh_v2.js  dump_all_cookies.js  inject_grok_chat.js  package-lock.json  package.json  quick_extract.js  screenshot_edge.js
scripts/ui/: index.html
scripts/ui/core/: api.js  registry.js  shell.js  theme.css
scripts/ui/panels/: agents.js  index.js  orchestrator.js
