[package]
name = "synapz-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
synapz-memory = { path = "../synapz-memory" }
synapz-tools = { path = "../synapz-tools" }
rmcp = { version = "0.1", features = ["server", "transport-io"] }
chrono = { workspace = true }
